--- a/lib/odsaStyle.css
+++ b/lib/odsaStyle.css
@@ -31,15 +31,25 @@
   height: 30px;
 }
 
-.jsavcode {
-  border: 1px solid;
-  border-color: white;
-}
-
 .jsavcodeline { 
   margin-bottom: 1px;
   font-size: 14px;
   line-height: 16px;
+}
+
+/* Put a white border around the code block. Do it this way to
+   keep from putting border around the line numbers. */
+.jsavcodeline {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
+
+.jsavcodeline:first-child {
+  border-top: 1px solid #fff;
+}
+
+.jsavcodeline:last-child {
+  border-bottom: 1px solid #fff;
 }
 
 .jsavcodeline.jsavhighlight {
