Fixed inlineav diagram centering, made the TODO comparison completely case insensitive

--- a/lib/odsaMOD.css
+++ b/lib/odsaMOD.css
@@ -32,6 +32,11 @@
   font-size: 15px;
 }
 
+/* Center inlineav diagrams */
+.divdgm {
+  width: 100% !important;
+}
+
 /* Hide flagged chapters fom the TOC */
 .hide-from-toc {
   display: none;
