Lots of updates to sorting, lists

--- a/Exercises/List/astackPRO.css
+++ b/Exercises/List/astackPRO.css
@@ -7,20 +7,8 @@
   height: 115px;
 }
 
-.jsavnode {
-  line-height: 30px !important;
-  min-width: 30px !important;
-  max-width: 30px !important;
-  min-height: 30px !important;
-  max-height: 30px !important;
-}
-
-.jsavnode .jsavvalue { /* Make array cell values center vertically */
-  height: 30px;
-}
-
 #reset { margin-right: 20px;}
 
-.highlight{
+.highlight{      /* For the pointer */
   background-color: yellow;
 }
