Standardize CSS for KA exercises, get rid of unused SortingAnal files, bring other SortingAnal files up to date

--- a/lib/odsaStyle.css
+++ b/lib/odsaStyle.css
@@ -23,6 +23,10 @@
   background-color: #f00 !important;
 }
 
+.jsavcontainer {
+  border: 0;
+}
+
 .jsavnode.sorted {
   background-color: #ffffcc !important;
 }
