Updateds for binsort, use of addClass in List AVs

--- a/AV/List/dlist.css
+++ b/AV/List/dlist.css
@@ -19,7 +19,7 @@
 }
 
 .jsavhorizontallist.jsavautoresize .jsavnode {
-  min-width: 50px !important;
-  max-height: 45px !important;
+  min-width: 50px;
+  max-width: 50px;
   padding-right: 0;
 }
