--- a/AV/Sorting/radixLinkAV.css
+++ b/AV/Sorting/radixLinkAV.css
@@ -7,19 +7,12 @@
   height: 620px;
 }
 
-.jsavlist .jsavlistnode {
-  min-height: 30px !important;
-  max-height: 30px !important;
-  line-height: 30px;
-}
-.jsavlist .jsavvalue {
-  height: 30px;
-}
-
 .jsavlist .jsavedge {
   stroke-width: 2;
 }
 
+/* For some reason, this makes the second and following linked list
+   nodes appear in the right place. */
 .jsavarray {
   padding-left: 0;
 }
@@ -27,4 +20,14 @@
 .jsavcanvas > svg {
   height: 550px;
   width: 835px;
+}
+
+/* We make the arrays bigger than the OpenDSA stylesheet standard
+   SO that we  have reasonable room for the linked lists */
+.jsavverticalarray .jsavnode {
+  line-height: 45px !important;
+  min-width: 45px !important;
+  max-width: 45px !important;
+  min-height: 45px !important;
+  max-height: 45px !important;
 }
