--- a/lib/odsaStyle.css
+++ b/lib/odsaStyle.css
@@ -42,6 +42,11 @@
   background-color: #ffffcc !important;
 }
 
+.jsavautoresize .jsavnode {
+  min-width: 30px;
+  min-height: 30px;
+}
+
 .jsavhorizontalarray .jsavnode {
   line-height: 30px !important;
   min-width: 30px !important;
@@ -135,4 +140,59 @@
 
 .jsavbararray.jsavindexed {
   margin-bottom: 0;
+}
+
+.jsavstack {
+  position: relative;
+  background-color: inherit;
+}
+
+.jsavstacknode {
+  position: absolute;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  z-index: 100;
+}
+
+.jsavtreenode.emptynode {
+  border: 1px dashed #777 !important;
+  background-color: #fff !important;
+  color: #777 !important;
+  cursor: pointer;
+}
+
+.jsavtreenode.rednode {
+  background-color: #f00;
+  color: #fff;
+}
+
+.jsavtreenode.blacknode {
+  background-color: #000;
+  color: #fff;
+}
+
+.selected, .selected .jsavvalue, .jsavarray.jsavbararray .jsavindex.selected .jsavvalue {
+  font-size: 110%;
+  background-color: #ddf;
+}
+
+.jsavtreenode.jsavredblacknode.rednode.selected {
+  background-color: #f00;
+}
+
+.jsavtreenode.jsavredblacknode.blacknode.selected {
+  background-color: #000;
+}
+
+.jsavtreenode.jsavredblacknode.selected {
+  box-shadow: 0px 0px 5px 10px #ddf;  
+}
+
+.greybg, .greybg.jsavvalue, .jsavarray.jsavbararray .jsavindex.greybg .jsavvalue {
+  background-color: #eee;
+}
+
+.greenbg, .greenbg.jsavvalue, .jsavarray.jsavbararray .jsavindex.greenbg .jsavvalue {
+  background-color: #3f5;
 }
