--- a/AV/Binary/heapbuildProofCON.css
+++ b/AV/Binary/heapbuildProofCON.css
@@ -13,3 +13,10 @@
 #heapbuildProofCON .jsavoutput.jsavline {
   height: 30px;
 }
+.rotated {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
