--- a/AV/Binary/huffman.css
+++ b/AV/Binary/huffman.css
@@ -1,8 +1,3 @@
-#huffmanCON1 {
-  width: 800px;
-  height: 380px;
-}
-
 .jsavtree { position: absolute; } /* position trees absolutely */
 .jsavtree:nth-of-type(1) { left:50px;} /* move 2nd tree to the right */
 .jsavtree:nth-of-type(2) { left:150px;} /* move 3rd tree to the right */
@@ -33,4 +28,39 @@
   background-color: orange;
   line-height: 22px;
   z-index: 100; /* Prevents the tails of the edges from showing up in the background of the node */
+}
+
+.jsavnode.jsavtreenode.jsavbinarynode.huffmanleaf {
+  height:32px;
+  width:32px;
+  line-height: 16px;
+  z-index: 100;
+  margin-top:3px; 
+  padding-top: 1px;
+}
+
+.jsavoutput.jsavline {
+  height: 70px;
+}
+
+.jsavmatrix .jsavarray {
+  position: relative;
+  top: 0;
+}
+
+.jsavmatrix .jsavarray li.jsavnode {
+  width: 65px;
+  min-width: 65px !important;
+  max-width: 65px !important;
+  background-color: transparent;
+  color: inherit;
+}
+
+.jsavmatrix .jsavarray:nth-of-type(1) {
+  font-family: 'Trebuchet MS', Arial, Helvetica, sans-serif;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #fff;
+  border:1px #98bf21;
+  background-color:#9ACD32;
 }
