Changed background and border color in odsaAV.css and show/hide button css in odsaMOD.css and odsaMOD.js

--- a/lib/odsaAV.css
+++ b/lib/odsaAV.css
@@ -14,7 +14,8 @@ body, input, select {
 /* Creates a header which standardizes the layout for AV controls */
 .headerTable {
   /*margin-top: -10px;*/
-  border-bottom: 1px solid black;
+  /*border-bottom: 1px solid black;*/
+  border-bottom: 1px solid #B6C0B2;
   width: 100%;
 }
 
@@ -58,7 +59,8 @@ form {
 }
 
 .jsavcontainer {
-  background-color: #efe;
+  /*background-color: #efe;*/
+  background-color: transparent;
   border: 0 none;
 }
 
@@ -105,14 +107,17 @@ form {
 /* Style for the container holding proficiency exercise instructions */
 .instructions {
   padding: 10px;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
+  border: 1px solid #B6C0B2;
   margin-top: -15px;
 }
 
 /* Style for the div containing the entire AV or exercise */
 #container {
-  border: 1px solid black;
-  background-color: #efe;
+  /*border: 1px solid black;
+  background-color: #efe;*/
+  border: 1px solid #B6C0B2;
+  background-color: #E2EEDD;
   padding: 5px;
   overflow: hidden;
 }
