--- a/lib/odsaMOD.css
+++ b/lib/odsaMOD.css
@@ -60,6 +60,13 @@ form.signin p, form.signin span {
 /* All showHide buttons default to red */
 .showHideLink {
   background-color: #FF0000;
+  color: #fff;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  padding: 3px 5px;
+}
+.showHideLink:hover {
+  box-shadow: 0 24px 0 0 rgba(0,0,0, 0.2) inset;
 }
 /* Message that appears next to a showHide button */
 .shb_msg {
