Visulizations heights adjusted

--- a/AV/RecurTutor/recursiontracecon1.css
+++ b/AV/RecurTutor/recursiontracecon1.css
@@ -1,17 +1,4 @@
-
-
-#RecursionTraceCON1 .jsavcanvas{
- height: 500px;
- width: 700px;
+#RecursionTraceCON1.jsavcontainer {
+  height: 580px;
 }
 
-.jsavcanvas {
- margin-left: auto;
- margin-right: auto;
- height: 500px;
- width: 540px;
-}
-
-.svg{
-  stroke-width: 1;
-}
