--- a/AV/RecurTutor/recursiontracecon4.css
+++ b/AV/RecurTutor/recursiontracecon4.css
@@ -1,18 +1,4 @@
-RecursionTraceCON4.jsavcanvas {
- margin-left: auto;
- margin-right: auto;
- height:400px;
- width: 400px;
+#RecursionTraceCON4.jsavcontainer {
+  height: 400px;
 }
 
-.jsavcanvas {
- margin-left: auto;
- margin-right: auto;
- height: 400px;
- width: 540px;
-}
-
-
-.svg{
-  stroke-width: 1;
-}
