--- a/AV/RecurTutor/recursiontracecon7.css
+++ b/AV/RecurTutor/recursiontracecon7.css
@@ -1,17 +1,4 @@
-
-
-#RecursionTraceCON6 .jsavcanvas{
- height: 500px;
- width: 700px;
+#RecursionTraceCON7.jsavcontainer {
+  height: 420px;
 }
 
-.jsavcanvas {
- margin-left: auto;
- margin-right: auto;
- height: 500px;
- width: 540px;
-}
-
-.svg{
-  stroke-width: 1;
-}
