--- a/AV/RecurTutor/recursionwritecon1.css
+++ b/AV/RecurTutor/recursionwritecon1.css
@@ -1,20 +1,3 @@
-
-
-RecursionWriteCON1.jsavcanvas {
- margin-left: auto;
- margin-right: auto;
- height: 200px;
- width: 540px;
-}
-
-
-.jsavcanvas {
- margin-left: auto;
- margin-right: auto;
- height: 200px;
- width: 540px;
-}
-
-.svg{
-  stroke-width: 1;
+RecursionWriteCON1.jsavcontainer {
+  height: 70px;
 }
