--- a/AV/Development/bintreeCON.css
+++ b/AV/Development/bintreeCON.css
@@ -1,11 +1,11 @@
-.jsavcanvas {
+#bintreeCONBTEX .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
  height: 675px;
 }
 
 svg {
-  stroke-width: 1;
+  stroke-width: 5;
 }
 
 .emptyLeaf {
