Added second binary tree difference example to 7.2

--- a/AV/Development/BinDiff.css
+++ b/AV/Development/BinDiff.css
@@ -1,7 +1,7 @@
-#BinExamp .jsavcanvas {
+#BinDiff .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
- height: 215px;
+ height: 340px;
 }
 
 svg {
