Added second and third examples for binary trees -- different trees and full/complete trees

--- a/AV/Development/BinDiff.css
+++ b/AV/Development/BinDiff.css
@@ -4,6 +4,12 @@
  height: 340px;
 }
 
+.clearnode {
+  background-color: #eed;
+  border-color: #eed;
+  box-shadow: 2px 2px 2px rgba(120, 120, 120, 0.0);
+}
+
 svg {
   stroke-width: 1;
 }
