Move checkmark to upper left corner issue#190
The completion check mark was getting in the way on the slideshow
content. It was moved to the upper left corner of the JSAV canvas right
next to the slide counter.

--- a/lib/odsaMOD.css
+++ b/lib/odsaMOD.css
@@ -85,8 +85,8 @@ form.signin p, form.signin span {
 /* Style for mini-slideshow checkmark proficiency indicator */
 .prof_check_mark {
   position: absolute;
-  bottom: 45px; /* top: 65px; */
-  right: 10px;
+  top: 10px;
+  left: 35px;
   display: none;
 }
 /* Saving message for checkmark proficiency indicator */
