--- a/AV/Development/FullComp.css
+++ b/AV/Development/FullComp.css
@@ -1,14 +1,14 @@
 #FullComp .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
- height: 320px;
+ height: 200px;
 }
 
-.blacknode {
-  min-width: 5px;
-  max-width: 5px;
-  min-height: 5px;
-  max-height: 5px;
+#FullComp .jsavnode.jsavtreenode {
+  min-width: 10px;
+  max-width: 10px;
+  min-height: 10px;
+  max-height: 10px;
   background-color: #000000;
   border-color: #000000;
 }
