--- a/AV/Binary/huffman.css
+++ b/AV/Binary/huffman.css
@@ -10,7 +10,7 @@
 .jsavtree:nth-of-type(9) { left:350px;} /* move 9th tree to the right */
 .jsavcanvas { height: 500px;} /* set the height of the container */
 
-// change size and margins of arrays
+/* change size and margins of arrays*/
 .jsavarray { margin: 0; height: 40px; min-height: 40px; position: absolute}
 .jsavarray li { border-radius: 0 !important; height: 35px; width: 145px; font-size: 15px; line-height: 40px;}
 .jsavarray:nth-of-type(1) {top: 0px;}
