--- a/AV/List/listADTposCON.css
+++ b/AV/List/listADTposCON.css
@@ -7,11 +7,10 @@
   background-color: #eed;
   line-height: 60px !important;
   min-width: 60px !important;
-  max-width: 60px !mportant;
+  max-width: 60px !important;
   min-height: 60px !important;
   max-height: 60px !important;
   font-size: 20px;
-  min-width: 65px;
   box-shadow: 0 0 0;
 }
 
