--- a/lib/odsaStyle.css
+++ b/lib/odsaStyle.css
@@ -187,7 +187,7 @@
 }
 
 .jsavtreenode.jsavredblacknode.selected {
-  box-shadow: 0px 0px 5px 10px #ddf;  
+  box-shadow: 0 0 5px 10px #ddf;  
 }
 
 .greybg, .greybg.jsavvalue, .jsavarray.jsavbararray .jsavindex.greybg .jsavvalue {
