Implement insert and find example for 2-3+ tree

--- a/AV/Development/TTPlusTree.css
+++ b/AV/Development/TTPlusTree.css
@@ -1,3 +1,8 @@
+#tree, #find {
+    max-width: 900px;
+    background-color: #E2EEDD;
+    margin-bottom: 1em;
+}
 
 .jsavcanvas {
     height: 300px;
@@ -46,10 +51,46 @@
     line-height: 17px;
 }
 
-.insert-label {
+.insert-label, .find-label {
     display: block;
     width: 3.5em;
     position: relative;
     font-size: 1.3em;
     margin: 0;
 }
+
+.promote-label, .compare-label {
+    display: block;
+    width: 4.8em;
+    position: relative;
+    font-size: 1.3em;
+    margin: 0;
+}
+
+.compare-description {
+    font-size: .7em;
+    color: #5E5E5E;
+    padding-left: 1em;
+}
+
+.compare-label {
+    width: 5em;
+}
+
+#find .jsavoutput {
+    min-height: 95px;
+}
+
+#find .jsavoutput .compare-labels {
+    padding: .2em;
+    padding-left: .5em;
+}
+
+#find .jsavoutput .correct, .correct .compare-description {
+    background-color: #13870F;
+    color: white;
+}
+
+
+
+
