Added pseudo code object for preorder traversal in GenTree. Added css styling for nodes that have been processed.2

--- a/AV/Development/GenTreeCON.css
+++ b/AV/Development/GenTreeCON.css
@@ -8,15 +8,25 @@
 }
 
 #GenTreePreTravCON {
-  height: 330px;
+  height: 400px;
 }
 
 #GenTreePreTravCON .jsavoutput {
   height: 20px;
 }
 
+.processedNode{
+	border: 2px solid blue;
+}
+
 #GenTreePreTravCON .jsavtree {
-  top: 30px;
+  position: relative;
+  top: -200px;
+  left: -100px;
+}
+
+#GenTreePreTravCON .jsavcode{
+  margin-left: 10px;
 }
 
 #GenTreePostTravCON {
