--- a/lib/odsaMOD.css
+++ b/lib/odsaMOD.css
@@ -83,6 +83,12 @@ form.signin p, form.signin span {
   top: 5px;
   width: 20px;
 }
+.loading-spinner {
+  height: 25px;
+  position: relative;
+  top: 7px;
+  width: 25px;
+}
 /* Style for mini-slideshow checkmark proficiency indicator */
 .prof_check_mark {
   position: absolute;
