--- a/lib/odsaMOD.css
+++ b/lib/odsaMOD.css
@@ -159,6 +159,7 @@ iframe {
   overflow: hidden;
   /* Set the position and top attributes to prevent the page from */
   /* automatically scrolling to iframes as they load */
+  /* https://stackoverflow.com/questions/6596668/iframe-on-the-page-bottom-avoid-automatic-scroll-of-the-page */
   position: absolute;
   top: -9999em;
 }
