Changed slideshow controls to span elements; updated JSAV

--- a/lib/odsaAV.css
+++ b/lib/odsaAV.css
@@ -79,7 +79,7 @@ form {
   width: auto;
 }
 
-.jsavmodelanswer .jsavcontrols a {
+.jsavmodelanswer .jsavcontrols span {
   margin: 20px 20px 0 0;
 }
 
