Add slideshow for LRU with write

--- a/AV/Development/buffpoolCON.css
+++ b/AV/Development/buffpoolCON.css
@@ -1,7 +1,7 @@
-.jsavcontainer {
-  height: 500px;
+.jsavcanvas {
+  height: 360px;
 }
 
-.jsavcanvas {
-  height: 450px;
+#LRUwriteCON .jsavline {
+  height: 100px;
 }
