Added another buffer pool slideshow; fixed bug in mergesort KA exercise

--- a/AV/Development/buffpoolCON.css
+++ b/AV/Development/buffpoolCON.css
@@ -5,3 +5,13 @@
 #LRUwriteCON .jsavline {
   height: 100px;
 }
+
+.jsavverticalarray .jsavnode.buffer {
+  max-width: 100px !important;
+  min-width: 100px !important;
+}
+
+.jsavhorizontalarray .jsavnode.buffer {
+  max-width: 100px !important;
+  min-width: 100px !important;
+}
