--- a/AV/List/listElementCON.css
+++ b/AV/List/listElementCON.css
@@ -6,38 +6,36 @@
   border:1px solid #eee;
 }
 
-.jsavhorizontalarray.jsavautoresize .jsavnode {
-  min-width: 30px;
-  max-width: 30px;
-  min-height: 30px;
-  max-height: 30px;
-  line-height: 30px;
+.jsavverticalarray .jsavnode.widerecord {
+  max-width: 150px !important;
+  min-width: 150px !important;
 }
 
-.jsavverticalarray.jsavautoresize .jsavnode {
-  min-width: 180px;
-  max-width: 180px;
-  min-height: 45px;
-  max-height: 45px;
-  line-height: 45px;
-  text-align: left;
-  padding-left: 10px;
+.jsavhorizontalarray .jsavnode.widerecord {
+  max-width: 150px !important;
+  min-width: 150px !important;
 }
+
 #listElementDataCON {
   height: 500px;
 }
+
 #listElementDataCON .jsavoutput.jsavline {
   height: 75px;
 }
+
 #listElementTypeCON {
   height: 500px;
 }
+
 #listElementTypeCON .jsavoutput.jsavline {
   height: 75px;
 }
+
 #listElementDeleteCON {
   height: 500px;
 }
+
 #listElementDeleteCON .jsavoutput.jsavline {
   height: 75px;
 }
