--- a/AV/Development/BTCON.css
+++ b/AV/Development/BTCON.css
@@ -74,9 +74,18 @@
   border-color: blue;
 }
 
-#rectangle .intlnode {
+.squareleaf {
+  border-radius: 1px;
   background-color: white;
-  color: black;
-  border-color: black;
-  border-width: 2px;
+  line-height: 22px;
+  z-index: 100; /* Prevents the tails of the edges from showing up in the background of the node */
 }
+
+/*.jsavnode.jsavtreenode.jsavbinarynode.huffmanleaf {
+  height:32px;
+  width:32px;
+  line-height: 16px;
+  z-index: 100;
+  margin-top:3px;
+  padding-top: 1px;
+}*/
