Update to JSAV v0.7.0-253, hashing exercises fixed up

--- a/AV/Development/KruskalAV.css
+++ b/AV/Development/KruskalAV.css
@@ -26,3 +26,7 @@
   -webkit-border-bottom-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
+
+.jsavgraph .jsavedge {
+  stroke-width: 1.5px;
+}
