Polishing for many slideshows. Moved some materials out of IS versions.

--- a/lib/odsaStyle.css
+++ b/lib/odsaStyle.css
@@ -19,6 +19,20 @@
   color: #ccc;
 }
 
+.invisnode { /* Make a tree node invisible in a slideshow */
+  background-color: #eed;
+  color: #eed;
+  border-color: #eed;
+  box-shadow: 2px 2px 2px rgba(120, 120, 120, 0.0);
+}
+
+/* Make a slideshow tree node invisible (except for label) */
+.clearnode {
+  background-color: #eed;
+  border-color: #eed;
+  box-shadow: 2px 2px 2px rgba(120, 120, 120, 0.0);
+}
+
 /* Make font bigger, used typically with click handler setting up swap */
 .enlarge .jsavvalue {
   font-size: 120%;
