--- a/AV/Binary/FullCompCON.css
+++ b/AV/Binary/FullCompCON.css
@@ -1,10 +1,10 @@
-#FullComp .jsavcanvas {
+#FullCompCON .jsavcanvas {
  margin-left: auto;
  margin-right: auto;
  height: 200px;
 }
 
-#FullComp .jsavnode.jsavtreenode {
+#FullCompCON .jsavnode.jsavtreenode {
   min-width: 10px;
   max-width: 10px;
   min-height: 10px;
