Clean up code from Union/Find AVs and sequential representation AVs; add glossary entries; clean up use of numref, dfn

--- a/AV/Binary/BTCON.css
+++ b/AV/Binary/BTCON.css
@@ -62,19 +62,8 @@
   right: -260px;
 }
 
-.thickblacknode { /* Make a node edge to be thick and black */
-  background-color: white;
-  border-color: black;
-  border-width: 2px;
-}
-
+/* Make these internal nodes square */
 .internalnode {
-  background-color: white;
-  color: blue;
-  border-color: blue;
-}
-
-.squareleaf {
   border-radius: 1px;
   background-color: white;
   line-height: 22px;
