--- a/lib/odsaStyle.css
+++ b/lib/odsaStyle.css
@@ -26,6 +26,12 @@
   box-shadow: 2px 2px 2px rgba(120, 120, 120, 0.0);
 }
 
+
+/* Make a node's edge thick */
+.thicknode {
+  border-width: 2px;
+}
+
 /* Make a slideshow tree node invisible (except for label) */
 .clearnode {
   background-color: #eed;
