Renamed the visulizations of the writing module

--- a/AV/RecurTutor/recurIntroCON.css
+++ b/AV/RecurTutor/recurIntroCON.css
@@ -10,11 +10,11 @@ background-size: cover;
 background-image: url(Icons/person2.png);
 }	
 
-#recursionintrocon1 {
+#recurIntroDelegateCON {
  height: 200px;
 }
 
-#recursionintrocon2 {
+#recurIntroDetailsCON {
  height: 200px;
 }
 
