--- a/AV/RecurTutor/recursionWrtSumCON.css
+++ b/AV/RecurTutor/recursionWrtSumCON.css
@@ -1,7 +1,7 @@
-RecursionWriteCON2.jsavcanvas {
+#recursionWrtSumCON {
  margin-left: auto;
  margin-right: auto;
- height: 700px;
+ height: 500px;
  width: 900px;
 }
 
