--- a/lib/codemirror/lib/codemirror.css
+++ b/lib/codemirror/lib/codemirror.css
@@ -3,8 +3,9 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
-  height: 300px;
-  border: 2px solid #000;
+  height: auto;
+  width: auto;
+  border: 1.5px solid #000;
 }
 
 /* PADDING */
