Common Mistakes illustarted in RecurTutor2 and a visualization added

--- a/AV/RecurTutor2/AdvancedRecurTutor.css
+++ b/AV/RecurTutor2/AdvancedRecurTutor.css
@@ -20,7 +20,9 @@ background-size: cover;
 }
 
 #IneffBinaryTreeRangeCON .jsavcanvas {
- height: 300px;
+ height: 350px;
 }
 
-
+#BinaryTreeMistakesCON .jsavcanvas {
+ height: 450px;
+}
